--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,16 @@
 <h1>COUCOU FROM HOME PAGE</h1>
-
+<% if user_signed_in? %>
+  <%= link_to destroy_user_session_path, method: :delete do %>
+    <%= t(".sign_out", default: "Log out") %>
+  <% end %>
+<% else %>
+  <%= link_to 'Connexion', new_user_session_path %>
+  <%= link_to 'Créer un compte', new_user_registration_path %>
+<% end %>
+<br>
+<br>
+<br>
+<br>
 <ul>
   <% @products.each do |product| %>
     <li><h3><%= link_to product_path(product) do %><%= product.name %> <% end %></h3>
