--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,3 +5,5 @@
 <p>Characteristics: - <%= @product.characteristics %></p>
 <p>Déscription <%= @product.description %></p>
 <p><strong>Prix <%= @product.price %> € / jour</strong>, Déposit <%= @product.deposit %> €</p></li>
+
+<%= link_to "Supprimer ce poduit", product_path(@product), :method => :delete, :data => {:confirm => "Veux-tu vraiment supprimer ce produit Jano?"}, class: 'action-btn red-btn' %>
