--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,3 +7,7 @@
 <p><strong>Prix <%= @product.price %> € / jour</strong>, Déposit <%= @product.deposit %> €</p></li>
 
 <%= link_to "Supprimer ce poduit", product_path(@product), :method => :delete, :data => {:confirm => "Veux-tu vraiment supprimer ce produit Jano?"}, class: 'action-btn red-btn' %>
+<br>
+<%= link_to "Modifier produit", edit_product_path(@product) %>
+<br>
+<%= link_to "Retour au dashboard", admin_dashboard_path %>
