connected to mailchimp

--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -1,8 +1,8 @@
 <h1>Hola! from admin dashboard </h1>
-<!--
+
 <% @lines.each do |line| %>
   <p><%= line %></p>
-<% end %> -->
+<% end %>
 <p>admin? <%= current_user.admin %></p>
 <ul>
   <% @users.each do |user| %>
