added message model controller.....and put it on home page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,6 +11,10 @@
   cursor: pointer;
 }
 
+.catgories-container {
+  text-align: center;
+}
+
 .tags-catgories-container-small-screen {
   display: none;
   position: absolute;
