--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <%= render 'shared/navbar' %>
+  <%= render 'shared/categories' %>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   <body>
