--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,31 +1,20 @@
-<div id="toggle-categories-arrow"><span>Categories <i class="fa fa-arrow-right"></i></span></div>
-<div class="container">
-  <div class="tags-catgories-container">
-    <% @categories.each do |category| %>
-      <%= link_to category_path(category.name), class: 'category-tag' do %>
-        <%= category.name.capitalize %>
-      <% end %>
-    <% end %>
+<div class="row row-first-section">
+  <div class="col-xs-12 col-sm-6">
+    <div class="container container-best-searches">
+      <div class="row">
+        <% @best_searches.each do |product| %>
+          <div class="col-xs-12 col-sm-6">
+            <%= link_to product_path(product) do %>
+              <%= cl_image_tag product.photo %>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
-  <div class="tags-catgories-container-small-screen">
-    <ul>
-      <% @categories.each do |category| %>
-        <li class="category-tag-small-screen"><%= link_to category_path(category.name) do %>
-        <%= category.name.capitalize %>
-      <% end %></li>
-      <% end %>
-    </ul>
+  <div class="col-xs-12 col-sm-6">
+    <div class="contanier contact-container">
+      <%= render 'messages/form' %>
+    </div>
   </div>
-</div>
-
-<div class="container">
-  <ul>
-    <% @best_searches.each do |product| %>
-      <li><%= link_to product_path(product) do %>
-        <%= product.name %>
-          <% end %>
-          <%= product.nb_of_searches %>
-        </li>
-    <% end %>
-  </ul>
 </div>
