--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,91 +1,46 @@
-.category-tag {
-  border: 1px solid $loxam-color;
-  border-radius: 2px;
-  padding: 5px 10px;
+// .row-first-section {
+//   h2 {
+//     color: $loxam-color;
+//     font-size: 28px;
+//     text-align: center;
+//     margin: 0 0 70px 0;
+//     font-weight: normal;
+//     background-color: #fff;
+//     padding: 15px;
+//     box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+//   }
+// }
+
+.title-les-plus-recherchés {
+  color: $loxam-color;
+  font-size: 28px;
+  text-align: center;
+  margin: 0 0 70px 0;
+  // font-weight: normal;
   background-color: #fff;
-  color: $font-color;
-  margin: 5px;
-  font-size: 14px;
-  display: inline-block;
+  padding: 15px;
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  cursor: pointer;
+  border-radius: 2px;
 }
 
-.catgories-container {
-  text-align: center;
+.contact-column {
+  position: sticky;
+  top: 0;
 }
 
-.tags-catgories-container-small-screen {
-  display: none;
-  position: absolute;
-  top: 130px;
-  left: 0;
-  width: 70%;
-  height: 100%;
+.contact-container {
+  background-color: #fff;
+  padding: 35px;
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  ul {
-    padding: 0;
-    list-style: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    background-color: #fff;
-    overflow: scroll;
-  };
-  li {
+  border-radius: 2px;
+  h2 {
+    color: $loxam-color;
+    background-color: $light-gray;
+    font-size: 22px;
+    text-align: center;
+    margin: 0 0 70px 0;
+    // font-weight: normal;
     padding: 10px;
-    cursor: pointer;
-  };
-  li:nth-child(2n+2) {
-    background: $light-gray;
-  };
-  a {
-    color: $font-color;
-    &:hover {
-      text-decoration: none;
-      color: $font-color;
-    };
-  };
-}
-
-.category-tag-small-screen {
-  color: $font-color;
-  font-size: 14px;
-}
-
-.category-tag {
-  color: $font-color;
-  &:hover {
-    text-decoration: none;
-    color: $font-color;
-  };
-}
-
-#toggle-categories-arrow {
-  display: none;
-  position: fixed;
-  top: 90px;
-  width: 100vw;
-  z-index: 8;
-  text-align: center;
-  background-color: $loxam-color;
-  cursor: pointer;
-  span {
-    font-size: 14px;
-    color: #fff;
-    margin: 0;
-    padding: 10px 20px;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 991px) {
-  .tags-catgories-container {
-    display: none;
-  };
-  #toggle-categories-arrow {
-    display: block;
+    border-radius: 2px;
   }
 }
