--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -2,5 +2,5 @@
   <%= f.input :name %>
   <%= f.input :email %>
   <%= f.input :content %>
-  <% f.button :submit %>
+  <%= f.button :submit, value: 'Envoyer' %>
 <% end %>
