--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,20 +1,22 @@
-<div class="row row-first-section">
-  <div class="col-xs-12 col-sm-6">
-    <div class="container container-best-searches">
-      <div class="row">
-        <% @best_searches.each do |product| %>
-          <div class="col-xs-12 col-sm-6">
-            <%= link_to product_path(product) do %>
-              <%= cl_image_tag product.photo %>
-            <% end %>
-          </div>
-        <% end %>
+<div class="container">
+  <div class="row row-first-section">
+    <div class="col-xs-12 col-sm-7">
+        <div class="row">
+          <h2 class="title-les-plus-recherchés">LES PLUS RECHERCHÉS</h2>
+          <% @best_searches.each do |product| %>
+            <div class="col-xs-12 col-sm-6">
+              <%= link_to product_path(product) do %>
+                <%= cl_image_tag product.photo %>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
       </div>
-    </div>
-  </div>
-  <div class="col-xs-12 col-sm-6">
-    <div class="contanier contact-container">
-      <%= render 'messages/form' %>
+    <div class="col-xs-12 col-sm-5 contact-column">
+      <div class="contanier contact-container">
+        <h2>DEMANDE DE DEVIS</h2>
+        <%= render 'messages/form' %>
+      </div>
     </div>
   </div>
 </div>
