--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,3 +4,7 @@
 @import "search_bar";
 @import "button";
 @import "categories";
+@import "form";
+@import "card";
+@import "promo";
+@import "demande_devis";
