--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,22 +1,8 @@
-// .row-first-section {
-//   h2 {
-//     color: $loxam-color;
-//     font-size: 28px;
-//     text-align: center;
-//     margin: 0 0 70px 0;
-//     font-weight: normal;
-//     background-color: #fff;
-//     padding: 15px;
-//     box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-//   }
-// }
-
 .title-les-plus-recherchés {
   color: $loxam-color;
   font-size: 28px;
   text-align: center;
-  margin: 0 0 70px 0;
-  // font-weight: normal;
+  margin: 0 0 10px 0;
   background-color: #fff;
   padding: 15px;
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
@@ -28,19 +14,6 @@
   top: 0;
 }
 
-.contact-container {
-  background-color: #fff;
-  padding: 35px;
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  border-radius: 2px;
-  h2 {
-    color: $loxam-color;
-    background-color: $light-gray;
-    font-size: 22px;
-    text-align: center;
-    margin: 0 0 70px 0;
-    // font-weight: normal;
-    padding: 10px;
-    border-radius: 2px;
-  }
+.promo-container, .row-les-nouveautes {
+  margin-top: 50px;
 }
