--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,22 +1,63 @@
 <div class="container">
-  <div class="row row-first-section">
-    <div class="col-xs-12 col-sm-7">
-        <div class="row">
+  <div class="row main-row">
+    <div class="col-sm-12 col-md-5 contact-column">
+      <!-- Demande de devis -->
+      <div class="contact-container">
+        <h2>DEMANDE DE DEVIS</h2>
+        <%= render 'messages/form' %>
+      </div>
+      <!-- Promos -->
+      <div class="promo-container">
+        <h2>PROMOS</h2>
+        <div class="promo-card-image">
+          <% if @promo.display_description %>
+            <h3><%= @promo.title %></h3>
+            <p><%= @promo.description %></p>
+          <% end %>
+          <%= cl_image_tag @promo.media %>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-12 col-md-7">
+      <!-- Les plus recherchés -->
+        <div class="row row-les-plus-recherches">
           <h2 class="title-les-plus-recherchés">LES PLUS RECHERCHÉS</h2>
           <% @best_searches.each do |product| %>
-            <div class="col-xs-12 col-sm-6">
-              <%= link_to product_path(product) do %>
-                <%= cl_image_tag product.photo %>
-              <% end %>
+            <div class="col-xs-12 col-sm-6 col-product-card">
+              <div class="product-card">
+                <div class="product-card-image" style="background-image: url('<%= cl_image_path product.photo %>'); "></div>
+                <div class="card-infos">
+                <h3><%= product.name %></h3>
+                  <div class="card-price-and-btn">
+                    <p>à partir de <span class="price"><%= product.price %>€</span>/jour H.T</p>
+                    <%= link_to 'Détails', product_path(product), class: 'loxam-btn' %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <% end %>
+        </div>
+
+        <!-- Les nouveautés -->
+        <div class="row row-les-nouveautes">
+          <h2 class="title-les-plus-recherchés">LES NOUVEAUTÉS</h2>
+          <% @best_searches.each do |product| %>
+            <div class="col-xs-12 col-sm-6 col-product-card">
+              <div class="product-card">
+                <div class="product-card-image" style="background-image: url('<%= cl_image_path product.photo %>'); "></div>
+                <div class="card-infos">
+                <h3><%= product.name %></h3>
+                  <div class="card-price-and-btn">
+                    <p>à partir de <span class="price"><%= product.price %>€</span>/jour H.T</p>
+                    <%= link_to 'Détails', product_path(product), class: 'loxam-btn' %>
+                  </div>
+                </div>
+              </div>
             </div>
           <% end %>
         </div>
       </div>
-    <div class="col-xs-12 col-sm-5 contact-column">
-      <div class="contanier contact-container">
-        <h2>DEMANDE DE DEVIS</h2>
-        <%= render 'messages/form' %>
-      </div>
-    </div>
+
+
   </div>
 </div>
