--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -60,6 +60,7 @@
   margin-top: 15px;
   box-shadow: 1px 1px 4px #E6E6E6;
   border-color: #E6E6E6;
+  z-index: 99;
 }
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
