--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -1,22 +1,21 @@
 <h1>Hola! from admin dashboard </h1>
 
-<% @lines.each do |line| %>
-  <p><%= line %></p>
-<% end %>
-<p>admin? <%= current_user.admin %></p>
-<ul>
-  <% @users.each do |user| %>
-    <li><%= user.company %></li>
-  <% end %>
-</ul>
+<div class="container dashboard-container">
+  <div class="row tabs">
+    <div class="col-xs-2 tab" data-section="messages">Messages</div>
+    <div class="col-xs-2 tab" data-section="categories">Catégories</div>
+    <div class="col-xs-2 tab" data-section="products">Matériels</div>
+    <div class="col-xs-2 tab" data-section="promos">Promos</div>
+    <div class="col-xs-2 tab" data-section="users">Clients/Facturation</div>
+    <div class="col-xs-2 tab tab-active" data-section="stats">Stats</div>
+  </div>
+  <%= render "dashboard/dashboard_messages" %>
+  <%= render "dashboard/dashboard_categories" %>
+  <%= render "dashboard/dashboard_produts" %>
+  <%= render "dashboard/dashboard_promos" %>
+  <%= render "dashboard/dashboard_users" %>
+  <%= render "dashboard/dashboard_stats" %>
+</div>
 
-<%= link_to 'Ajouter un produit', new_product_path %>
-<br>
-<br>
-<ul>
-  <% @products.each do |product| %>
-    <li><%= link_to product.name, product_path(product) %> -
-      <%= link_to "Supprimer ce poduit", product_path(product), :method => :delete, :data => {:confirm => "Veux-tu vraiment supprimer ce produit Jano?"}, class: 'action-btn red-btn' %> -
-      <%= link_to "Modifier produit", edit_product_path(product) %></li>
-  <% end %>
-</ul>
+<%= javascript_pack_tag 'dashboard' %>
+
