--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -4,3 +4,15 @@ form {
     font-weight: lighter;
   }
 }
+
+.form-group {
+  margin: 15px 0 0 0;
+}
+
+.error {
+  font-size: 14px;
+}
+
+.btn-send-message {
+  margin-top: 15px;
+}
