--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,11 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Loxam City Bastia : Location de materiel pour batiment, TP, industrie</title>
+    <title><% if !current_user.nil? && current_user.admin %>
+            (<%= Message.where(checked: false).count %>)
+          <% end %>
+      Loxam City Bastia : Location de materiel pour batiment, TP, industrie
+    </title>
     <meta name="description" content="Location et vente de mat&amp;eacute;riel et outillage pour le batiment, les travaux publics et l'industrie">
     <meta name="keywords" content="location matériel, materiel travaux, batiment, rennovation, achat materiel corse, location amteriel corse, louer outils, location outil, loxam, loxam corse, loxam bastia, location outil nettoyage, outil beton, outil batiment, outil peinture, outil electrique">
     <%= csrf_meta_tags %>
