--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -40,7 +40,7 @@
     </div>
     <div class="col-sm-12 col-md-5 contact-column">
       <!-- Demande de devis -->
-      <div class="contact-container">
+      <div class="contact-container form-container">
         <h2>DEMANDE DE DEVIS</h2>
         <%= render 'messages/form' %>
       </div>
