--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container dashboard-container">
   <div class="row tabs">
-    <div class="col-xs-2 tab" data-section="messages">Messages</div>
+    <div class="col-xs-2 tab" data-section="messages"><div class="reload-notif"><span class="nb-unchecked-messages notification"><%= Message.where(checked: false).count %></span></div> Messages</div>
     <div class="col-xs-2 tab" data-section="categories">Catégories</div>
     <div class="col-xs-2 tab" data-section="products">Matériels</div>
     <div class="col-xs-2 tab" data-section="promos">Promos</div>
