--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -34,10 +34,22 @@
 
 
 /// Message section
+.container-messages {
+  color: $font-color;
+  p {
+    margin: 30px 0;
+  };
+}
+
 .message-display-part {
   display: flex;
   justify-content: space-between;
   padding: 10px;
+  font-size: 14px;
+  margin: 10px 0;
+  &:hover {
+    background-color: $light-gray;
+  }
 }
 
 .message-hidden-part {
@@ -48,7 +60,6 @@
   background-color: #fff;
   color: $loxam-color;
   border: 1px solid $loxam-color;
-  boder-radius: 50%;
   border-radius: 50%;
   width: 35px;
   height: 35px;
@@ -58,4 +69,24 @@
   position: absolute;
   top: -35%;
   left: -8%;
+}
+
+.message-actions {
+  display: flex;
+  width: 20%;
+  justify-content: space-between;
+}
+
+.container-show-message {
+  background-color: #fff;
+  padding: 15px;
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+  border-radius: 2px;
+}
+
+@media screen and (max-width: 991px) {
+  .dashboard-body, .container-show-message {
+    top: 85px;
+    position: relative;
+  }
 }
