--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -1,21 +1,22 @@
-<h1>Hola! from admin dashboard </h1>
+<div class="dashboard-body">
+  <h1 class="text-center">Hola! from admin dashboard</h1>
 
-<div class="container dashboard-container">
-  <div class="row tabs">
-    <div class="col-xs-2 tab" data-section="messages"><div class="reload-notif"><span class="nb-unchecked-messages notification"><%= Message.where(checked: false).count %></span></div> Messages</div>
-    <div class="col-xs-2 tab" data-section="categories">Catégories</div>
-    <div class="col-xs-2 tab" data-section="products">Matériels</div>
-    <div class="col-xs-2 tab" data-section="promos">Promos</div>
-    <div class="col-xs-2 tab" data-section="users">Clients/Facturation</div>
-    <div class="col-xs-2 tab tab-active" data-section="stats">Stats</div>
+  <div class="container dashboard-container">
+    <div class="row tabs">
+      <div class="col-xs-2 tab" data-section="messages"><div class="reload-notif"><span class="nb-unchecked-messages notification"><%= Message.where(checked: false).count %></span></div> Messages</div>
+      <div class="col-xs-2 tab" data-section="categories">Catégories</div>
+      <div class="col-xs-2 tab" data-section="products">Matériels</div>
+      <div class="col-xs-2 tab" data-section="promos">Promos</div>
+      <div class="col-xs-2 tab" data-section="users">Clients/Facturation</div>
+      <div class="col-xs-2 tab tab-active" data-section="stats">Stats</div>
+    </div>
+    <%= render "dashboard/dashboard_messages" %>
+    <%= render "dashboard/dashboard_categories" %>
+    <%= render "dashboard/dashboard_produts" %>
+    <%= render "dashboard/dashboard_promos" %>
+    <%= render "dashboard/dashboard_users" %>
+    <%= render "dashboard/dashboard_stats" %>
   </div>
-  <%= render "dashboard/dashboard_messages" %>
-  <%= render "dashboard/dashboard_categories" %>
-  <%= render "dashboard/dashboard_produts" %>
-  <%= render "dashboard/dashboard_promos" %>
-  <%= render "dashboard/dashboard_users" %>
-  <%= render "dashboard/dashboard_stats" %>
 </div>
-
 <%= javascript_pack_tag 'dashboard' %>
 
