--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -1,5 +1,10 @@
 .dashboard-container {
   background-color: #fff;
+  color: $font-color;
+}
+
+.title-dashboard {
+  font-size: 26px;
 }
 
 .dashboard-section {
