section categories finished

--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -46,6 +46,11 @@
   };
 }
 
+.container-messages-body {
+  height: 800px;
+  overflow: scroll;
+}
+
 .message-display-part {
   display: flex;
   justify-content: space-between;
@@ -53,7 +58,7 @@
   font-size: 14px;
   margin: 10px 0;
   &:hover {
-    background-color: $light-gray;
+    background-color: #ccc;
   }
 }
 
@@ -93,5 +98,50 @@
   .dashboard-body, .container-show-message {
     top: 85px;
     position: relative;
+  }
+}
+
+/// Message section
+// .row-category {
+//   .category-actions {
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//   };
+//   form {
+//     display: flex;
+//   }
+// }
+.container-form-new-category {
+  margin: 50px 0;
+}
+
+.row-category {
+  margin: 5px 0;
+  padding: 5px;
+  font-size: 16px;
+  &:nth-child(n+1) {
+    background: $light-gray;
+  };
+  p {
+    margin-bottom: 0;
+  };
+  form {
+    display: flex;
+    align-items: center;
+    .form-group, input {
+      margin: 0;
+    };
+    .form-group {
+      margin-right: 10px;
+    };
+    input {
+      height: 30px;
+      font-size: 14px;
+    }
+  };
+  .category-actions {
+    display: flex;
+    justify-content: space-between;
   }
 }
