--- a/app/views/dashboard/_dashboard_categories.html.erb
+++ b/app/views/dashboard/_dashboard_categories.html.erb
@@ -1,13 +1,26 @@
 <div class="dashboard-section dashboard-categories-section" data-section="categories">
   <h3>Categories</h3>
-  <%= link_to 'Ajouter une categorie', new_category_path %>
-  <br>
-  <br>
-  <ul>
+  <h4 class="nb-of-categories">Il y a <strong><%= Category.count %></strong> categories</h4>
+  <div class="container-form-new-category">
+    <%= render 'categories/form' %>
+  </div>
+  <div class="container-categories">
     <% @categories.each do |category| %>
-      <li><%= link_to category.name, category_path(category) %> -
-        <%= link_to "Supprimer cete categorie", category_path(category), :method => :delete, :data => {:confirm => "Veux-tu vraiment supprimer cette categorie Jano?"}, class: 'action-btn red-btn' %> -
-        <%= link_to "Modifier cette categorie", edit_category_path(category) %></li>
+    <div class="row row-category" id="row-category-<%= category.id %>">
+        <div class="col-sm-6 category-name">
+          <p><%= category.name.capitalize %></p>
+        </div>
+        <div class="col-sm-6 category-actions">
+          <%= simple_form_for category, remote: true  do |f| %>
+            <%= f.input :name, label: false %>
+            <span class="error"></span>
+            <%= f.button :submit, value: 'Modifier', class: 'loxam-btn btn-send' %>
+          <% end %>
+          <%= link_to category_path(category), remote: true, :method => :delete, :data => {:confirm => "Veux-tu vraiment supprimer cette categorie Jano?"} do %>
+          <i class="fa fa-trash"></i>
+          <% end %>
+        </div>
+      </div>
     <% end %>
-  </ul>
+  </div>
 </div>
