--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -5,5 +5,5 @@
   <span class="error" id="email-errro"></span>
   <%= f.input :content %>
   <span class="error" id="content-errro"></span>
-  <%= f.button :submit, value: 'Envoyer', class: 'loxam-btn btn-send-message' %>
+  <%= f.button :submit, value: 'Envoyer', class: 'loxam-btn btn-send' %>
 <% end %>
