working on products dashboard

--- a/app/views/categories/create.js.erb
+++ b/app/views/categories/create.js.erb
@@ -22,3 +22,5 @@ containerCategories.insertAdjacentHTML('afterbegin', newCategory);
 
 var nbOfCategories = document.querySelector('.nb-of-categories');
 nbOfCategories.innerHTML = 'Il y a <strong><%= Category.count %></strong> categories'
+
+document.querySelector('.form-control').value = "";
