--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -102,16 +102,6 @@
 }
 
 /// Message section
-// .row-category {
-//   .category-actions {
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//   };
-//   form {
-//     display: flex;
-//   }
-// }
 .container-form-new-category {
   margin: 50px 0;
 }
@@ -144,4 +134,22 @@
     display: flex;
     justify-content: space-between;
   }
+}
+
+/// Materiels section
+.product-box-dashboard {
+  height: 320px;
+  background-color: $light-gray;
+  padding: 10px;
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+  border-radius: 2px;
+  .product-img-dashboard {
+    height: 70%;
+    background-size: cover;
+    background-position: center;
+  }
+}
+
+.row-product-form {
+  display: none;
 }
