--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,15 +1,27 @@
-<%= simple_form_for @product do |f| %>
-  <%= f.error_notification %>
-    <%= f.input :name %>
-    <%= f.input :reference %>
-    <%= f.input :category %>
-    <%= f.input :price %>
-    <%= f.input :characteristics %>
-    <%= f.input :deposit %>
-    <%= f.input :technical_sheet %>
-    <%= f.input :photo %>
-    <%= f.input :photo_cache, as: :hidden %>
-    <%= f.input :video %>
-    <%= f.input :loxam_link %>
-    <%= f.button :submit %>
-<% end %>
+<div class="row row-product-form">
+  <%= simple_form_for @product do |f| %>
+    <%= f.error_notification %>
+    <div class="col-xs-12 col-sm-6">
+      <%= f.input :name %>
+      <%= f.input :reference %>
+      <%= f.association :category %>
+      <%= f.input :price %>
+      <%= f.input :deposit %>
+    </div>
+    <div class="col-xs-12 col-sm-6">
+      <%= f.input :characteristics %>
+      <%= f.input :technical_sheet %>
+      <div class="row">
+        <div class="col-xs-12 col-sm-6">
+          <%= f.input :photo %>
+          <%= f.input :photo_cache, as: :hidden %>
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <%= f.input :video %>
+        </div>
+      </div>
+      <%= f.input :loxam_link %>
+      <%= f.button :submit, class: 'loxam-btn btn-create-product' %>
+    </div>
+  <% end %>
+</div>
