trying to fix product creation issue

--- a/app/views/dashboard/_dashboard_produts.html.erb
+++ b/app/views/dashboard/_dashboard_produts.html.erb
@@ -1,24 +1,34 @@
 <div class="dashboard-section dashboard-products-section" data-section="products">
-  <div class="row">
+  <div class="container">
     <h3>Matériels</h3>
-    <h4>Il y a <strong><%= Product.count %></strong> matériels</h4>
-    <h4>Ajouter un matériel <i class="fa fa-plus-square"></i></h4>
+    <h4 class="nb-of-products">Il y a <strong><%= Product.count %></strong> matériels</h4>
+    <h4 class="add-a-product-title">Ajouter un matériel <i class="fa fa-plus-square" id="add-product"></i></h4>
   </div>
   <%= render 'products/form' %>
-    <div class="row">
-      <% @products.each do |product| %>
-          <div class="col-xs-6 col-sm-3 col-product-card">
-            <div class="product-card">
-              <div class="product-card-image" style="background-image: url('<%= cl_image_path product.photo %>'); "></div>
-              <div class="card-infos">
-              <h3><%= product.name %></h3>
-                <div class="card-price-and-btn">
-                  <p>à partir de <span class="price"><%= product.price %>€</span>/jour H.T</p>
-                  <%= link_to 'Détails', product_path(product), class: 'loxam-btn' %>
-                </div>
-              </div>
-            </div>
+  <div class="row row-products-dashboard">
+    <% @products.each do |product| %>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-product-card">
+        <div class="product-card product-card-dashboard">
+          <div class="product-card-image" style="background-image: url('<%= cl_image_path product.photo %>'); ">
+            <%= link_to product_path(product), remote: true, :method => :delete, :data => {:confirm => "Veux-tu vraiment supprimer ce matériel Jano?"} do %>
+          <i class="fa fa-trash"></i>
+          <% end %>
           </div>
-      <% end %>
-    </div>
+          <div class="card-infos">
+          <h3><%= product.name %></h3>
+          </div>
+          <ul>
+            <li><strong>Référence:</strong> <%= product.reference %></li>
+            <li><strong>Catégorie:</strong> <%= product.category.name %></li>
+            <li><strong>Prix:</strong> <%= product.price %>€/jour</li>
+            <li><strong>Deposit:</strong> <%= product.deposit %>€</li>
+            <li><strong>Video:</strong> <%= product.video %></li>
+            <li><strong>Lien Loxam:</strong> <%= product.loxam_link %></li>
+            <li><strong>Fiche technique:</strong> <%= product.technical_sheet %></li>
+          </ul>
+          <%= link_to 'Détails', product_path(product), class: 'loxam-btn' %>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
