--- a/app/assets/stylesheets/pages/_admin_dashboard.scss
+++ b/app/assets/stylesheets/pages/_admin_dashboard.scss
@@ -153,3 +153,40 @@
 .row-product-form {
   display: none;
 }
+
+#add-product {
+  font-size: 28px;
+  cursor: pointer;
+  color: $loxam-color;
+  transition: all 0.3s;
+  &:hover {
+    transform: rotate(90deg);
+  }
+}
+
+.add-a-product-title {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.product-card-dashboard {
+  font-size: 14px;
+  text-align: center;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  .product-card-image {
+    height: 20%;
+  };
+  .card-infos {
+    height: auto;
+  };
+  ul {
+    list-style: none;
+    padding: 0;
+    li {
+      margin: 5px 0;
+    }
+  }
+}
